# purchasing-power

./: .gitignore  Makefile  README.md
backend/: Dockerfile.dev  Dockerfile.prod  Makefile  README.md  env.example  main.py  pyproject.toml
backend/routers/: common.py  get_cpi.py  get_cpi_correction.py  get_cpis.py  project_personal_finances.py
backend/tests/: test_main.py
enrichment/: Dockerfile.dev  Dockerfile.prod  Makefile  README.md  env.example  main.py  pyproject.toml
enrichment/pure_sql/: run.py
enrichment/pure_sql/queries/: dim_countries.sql  dim_cpis.sql  enriched_schema.sql  fact_cpi_values.sql  keys.sql
etl/: .env.example  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  main.py  pyproject.toml
etl/eurostat/: run.py  utils.py
etl/restcountries/: run.py  utils.py
etl/usbls/: run.py  utils.py
frontend/: Dockerfile.dev  Makefile  README.md
frontend/app/: .env.example  index.html  package-lock.json  package.json
frontend/app/src/: About.jsx  AmountInput.jsx  App.css  App.jsx  Basics.css  Basics.jsx  Footer.jsx  Home.css  NumberInput.jsx  PersonalFinance.css  PersonalFinance.jsx  PersonalFinanceSchema.jsx  Sidebar.jsx
frontend/app/src/styles/: About.css  App.css  Basics.css  Footer.css  Sidebar.css
shared/: cli_utils.py  environments_utils.py  psql_connector.py
