[tool.poetry]
name = "purchasing-power-etl"
version = "0.1.0"
description = ""
authors = ["Konilo Zio <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
polars = "^1.5.0"
lxml = "^5.3.0"
python-dotenv = "^1.0.1"
typer = "^0.12.4"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
